--- a/public/style.css
+++ b/public/style.css
@@ -192,61 +192,62 @@ ul {
   backdrop-filter: blur(5px);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  padding-left: 12.8vw;
+  padding-right: 12.8vw;
 }
 
 .header-menu-list {
   display: flex;
-  column-gap: 10%;
+  height: 100%;
+  align-items: center;
+}
+
+.header-menu-item {
+  height: 60%;
+  display: flex;
+  align-items: center;
 }
 
 .header-menu-link {
   display: inline-flex;
   align-items: top;
-  height: 3vh;
   font-weight: 700;
   text-decoration: none;
   font-size: 19px;
   position: relative;
   color: var(--color-dark-black);
+  padding: 1vh;
 }
 
 .header-logo {
   flex-shrink: 0;
-  margin-right: 14.8vw;
   opacity: .75;
 }
 
 .lang-contant {
-  margin-left: 19vw;
-  margin-top: 2.3%;
+  display: inline-flex;
+  align-items: center;
+}
+
+.header-menu {
+  height: 100%;
+  align-items: center;
+  display: flex;
 }
 
 .lang-title {
   position: relative;
-  top: -3.5vh;
-  margin-left: 1.7vw;
+  margin-left: 0.1vw;
   font-weight: 600;
   font-size: 20px;
   color: black;
 }
 
-.header-menu-link::after {
-  content: '';
-  position: absolute;
-  top: -22% ;
-  left: -4%;
-  width: 110%;
-  height: 160%;
+.header-menu-item:hover {
   background-color: var(--color-for-border);
   border-radius: 10px;
-  z-index: -1;
-  opacity: 0;
-  transition: opacity 0.1s ease-in-out;
-}
-
-.header-menu-link:hover::after {
-  opacity: 1;
+  transition: background-color 0.1s ease-in-out;
 }
   
 .custom-font {
