--- a/public/disciplines.css
+++ b/public/disciplines.css
@@ -116,6 +116,7 @@ transition: background-color 0.1s ease-in-out;
 .content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
     gap: 2.5vw;
 }
 
