--- a/public/disciplines.css
+++ b/public/disciplines.css
@@ -87,11 +87,11 @@ background-color: var(--color-for-border);
 border-radius: 10px;
 z-index: -1;
 opacity: 0;
-transition: background-color 0.1s ease-in-out;
+transition: opacity 0.1s ease-in-out;
 }
 
 .header-menu-link:hover::after {
-    background-color: #d8dce2;
+opacity: 1;
 }
 
 .container {
@@ -115,8 +115,8 @@ transition: background-color 0.1s ease-in-out;
 
 .content {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    
     gap: 2.5vw;
 }
 
@@ -129,16 +129,26 @@ transition: background-color 0.1s ease-in-out;
 .type-discipline {
     font-size: 1.65vw;
     font-weight: 600;
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: rgba(172, 172, 172, 0.3);
     border-radius: 1.2vw;
     padding: .7vw;
+    color: var(--color-for-border)
+}
+
+.elements_discipline {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    gap: .3vw;
 }
 
 .element-discipline {
     font-size: 1.2vw; 
-    background-color: rgba(0, 0, 0, 0.1);
+    margin-block: 0;
+    background-color: rgba(172, 172, 172, 0.099);
     border-radius: 1.2vw;
-    padding: .7vw;
+    padding: 1.1vw;
+    font-weight: 600;
+    color: var(--color-for-border)
 }
 
 
