--- a/public/main.css
+++ b/public/main.css
@@ -727,7 +727,7 @@
  }
  
  
- @media screen and (max-width: 400px) {
+/*  @media screen and (max-width: 900px) {
    .course_block {
      display: block;
      padding: 3vh
@@ -739,7 +739,7 @@
      width: 100%;
      margin-top: 4vh;
    }
- }
+ } */
 
  @media screen and (max-width: 550px){
   .flex-element {
