--- a/public/materials.css
+++ b/public/materials.css
@@ -6,7 +6,7 @@
 *::after {
     box-sizing: border-box;
 }
- 
+
 body {
     font-size: 15px;
     font-family: "Montserrat", sans-serif;
@@ -22,73 +22,65 @@ ul {
 
 .header {
     width: 100vw;
-    height: 9%;
+    height: 9vh;
     position: fixed;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    padding-inline: 12.8vw;
     top: 0;
+    left: 0;
     z-index: 10;
-    background-color: rgba(255, 255, 255, 0.905);
+    background-color: rgba(255, 255, 255, 0.9);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding-left: 12.8vw;
-    padding-right: 12.8vw;
+    column-gap: 15vw;
+    justify-content: center;
 }
 
-.header-menu-list {
+.header-menu {
     display: flex;
-    height: 100%;
-    align-items: center;
-    gap: 1vw;
+    column-gap: .43vw;
+    justify-content: center;
 }
 
-.header-menu-item {
-    height: 60%;
+.header-menu-link {
     display: flex;
+    position: relative;
+    font-weight: 700;
+    height: 6vh;
     align-items: center;
+    padding-inline: .3vw;
+    text-decoration: none;
+    font-size: 1.25vw;
+    z-index: 10;
+    color: var(--color-dark-black);
     border-radius: 10px;
     transition: background-color 0.1s ease-in-out;
 }
 
-.header-menu-link {
-    display: inline-flex;
-    align-items: top;
-    font-weight: 700;
-    text-decoration: none;
-    font-size: 19px;
-    position: relative;
-    color: var(--color-dark-black);
-    padding: 1vh;
-}
+
+
 
 .header-logo {
     flex-shrink: 0;
-    opacity: 0.75;
+    opacity: .75;
 }
 
 .lang-contant {
-    display: inline-flex;
-    align-items: center;
-    width: 40px;
-}
-
-.header-menu {
-    height: 100%;
-    align-items: center;
     display: flex;
+    column-gap: .3vw;
 }
 
 .lang-title {
-    position: relative;
-    margin-left: 0.1vw;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 1.1vw;
     color: black;
 }
 
-.header-menu-item:hover {
-    background-color: #d8dce2;
+.header-menu-link:hover {
+    background-color: var(--color-for-border);
 }
 
 .main_content {
