--- a/public/teachers.css
+++ b/public/teachers.css
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
 
 .header {
     width: 100vw;
@@ -64,7 +73,7 @@
   .header-menu-link:hover {
     background-color: var(--color-for-border);
   }
-  
+
 
 .main_container {
     display: flex;
