--- a/public/teachers.css
+++ b/public/teachers.css
@@ -1,14 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+p{
+    margin: 0;
 }
 
 body {
-    margin: 0;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 .header {
@@ -74,83 +81,95 @@ body {
     background-color: var(--color-for-border);
   }
 
+.teachers {
+    margin-top: 10vw;
+}
 
-.main_container {
+.container_teacher { 
     display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-}
-
-.container_teacher {
-    display: flex;
-    align-items: center;
-    height: 400px;
-    border: 10px solid #9DA4FF;
-    padding: 0 20px; /* вертикальный отступ 0, горизонтальный отступ 20px */
-    border-radius: 15px;
-    -moz-border-radius: 15px;
-    -webkit-border-radius: 15px;
-    width: 1000px; 
-    
-    
-    
-}
-
-.basic_txt {
-    font-family: 'Inter';
-    flex: 1 1 auto; /* Чтобы текст занимал всю доступную ширину */
-    margin-left: 50px;
-} 
-.central_txt {
-    font-family: 'Inter';
-    flex: 1 1 auto; /* Чтобы текст занимал всю доступную ширину */
-    text-align: center;
-}
-
-.fat {
-    font-weight: 800; 
-}
-
-
-.column {
-    display: flex;
-    flex: 1 1 auto; /* Расширение столбцов на всю доступную ширину */
-    
-}
-.column_txt {
-    font-family: 'Inter';
-    margin-right: 30px;
-    text-align: left;
-    font-size: 13px;
-    margin-bottom: 10px; /* Отступ между элементами списка */
+    height:auto;
+    background-color: #6D78FD;
+    padding: 3vw;
+    border-radius: 3vw;
+    -moz-border-radius: 3vw;
+    -webkit-border-radius: 3vw;
+    width: 70vw;
+    margin-inline: auto;
+    margin-bottom: 1vw;
 }
 
 .photos_teachers img {
-    width: 300px; /* Задайте максимальную ширину изображений внутри контейнера */
+    width: 20vw; /* Задайте максимальную ширину изображений внутри контейнера */
     height: auto; /* Для сохранения пропорций изображений */
-    border-radius: 15px; /* Радиус скругления углов в пикселях */
+    border-radius: 2vw; /* Радиус скругления углов в пикселях */
+    border: 0.8vw solid white;
 }
 
-@media screen and (max-width: 1000px) {
-    p {
-      font-size: 10px; /* Уменьшение размера текста для устройств с маленькими экранами */
-    }
-    .photos_teachers img{
-        max-width: 200px;
-        height: auto;
-    }
-}
-@media screen and (max-width: 700px) {
-    .photos_teachers img{
-        max-width: 115px;
-        height: auto;
-    }
+.info_block {
+    font-family: 'Montserrat';
+    flex: 1 1 auto; /* Чтобы текст занимал всю доступную ширину */
+    margin-left: 2vw;
+} 
 
+.main_info {
+    padding: 1vw;
+    font-family: 'Montserrat';
+    flex: 1 1 auto; /* Чтобы текст занимал всю доступную ширину */
+    background-color: white;
+    border-radius: 1.5vw;
+    -moz-border-radius: 1.5vw;
+    -webkit-border-radius: 1.5vw;
 }
-@media screen and (max-width: 500px) {
-    .photos_teachers img{
-        max-width: 70px;
-        height: auto;
-    }
 
+.main_info h1 {
+    font-size: 1.8vw;
+    font-weight: 800;
+    margin: 0;
+    color: rgb(51, 51, 51);
+}
+
+.main_info p {
+    font-size: 1.1vw;
+    font-weight: 700; 
+    margin-top: 0.5vw;
+    color: rgb(71, 71, 71);
+}
+
+.sub_info {
+    background-color: rgba(255, 255, 255, 0.15);
+    color: white;
+    margin-top: 1.5vw;
+    padding: 1vw;
+    height: auto;
+    border-radius: 1.5vw;
+    -moz-border-radius: 1.5vw;
+    -webkit-border-radius: 1.5vw;
+}
+
+.sub_info h1 {
+    font-size: 1.5vw;
+    font-weight: 800;
+    margin: 0;
+}
+
+.grid {
+    display: grid;
+    gap: .4vw;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 1vw;
+}
+
+.grid_element{
+    padding: .2vw .5vw;
+    border-radius: .5vw;
+    -moz-border-radius: .5vw;
+    -webkit-border-radius: .5vw;
+    font-weight: 900;
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.23);
+}
+
+.grid_element p {
+    font-size: 1vw;
+    font-weight: 700;
 }
