--- a/public/main.css
+++ b/public/main.css
@@ -640,10 +640,11 @@
  
  .partner-container {
    display: flex; /* Использует Flexbox для размещения изображений в один ряд */
-   justify-content: space-between; /* Выравнивает изображения по центру контейнера по горизонтали */
+   justify-content: center; /* Выравнивает изображения по центру контейнера по горизонтали */
    align-items: center; /* Выравнивает изображения по центру контейнера по вертикали */
    margin-bottom: 20px; /* Отступ снизу */
    max-width: 100%; /* Максимальная ширина контейнера */
+   line-height: 60px;
    padding: 20px;
    padding-left: 12.8vw;
    padding-right: 12.8vw;
@@ -651,6 +652,7 @@
  .partner-container img {
    max-width: 20%; /* Задайте максимальную ширину изображений внутри контейнера */
    height: auto; /* Для сохранения пропорций изображений */
+   margin: 0 25px;
  }
  .partner_button img{
   transition: transform 0.3s;
