--- a/public/main.css
+++ b/public/main.css
@@ -109,12 +109,6 @@
  }
  
  
- /**
-    Чиним баг задержки смены цвета при взаимодействии с svg-элементами
-   */
- svg * {
-   transition-property: fill, stroke;
- }
  
  @font-face {
    font-family: 'Montserrat';
@@ -624,16 +618,17 @@
  
  .partner-container {
    display: flex; /* Использует Flexbox для размещения изображений в один ряд */
-   justify-content: center; /* Выравнивает изображения по центру контейнера по горизонтали */
+   justify-content: space-between; /* Выравнивает изображения по центру контейнера по горизонтали */
    align-items: center; /* Выравнивает изображения по центру контейнера по вертикали */
-   margin-bottom: 70px; /* Отступ снизу */
+   margin-bottom: 20px; /* Отступ снизу */
    max-width: 100%; /* Максимальная ширина контейнера */
-   line-height: 60px;
+   padding: 20px;
+   padding-left: 12.8vw;
+   padding-right: 12.8vw;
  }
  .partner-container img {
    max-width: 20%; /* Задайте максимальную ширину изображений внутри контейнера */
    height: auto; /* Для сохранения пропорций изображений */
-   margin: 0 25px;
  }
  .partner_button img{
   transition: transform 0.3s;
