--- a/public/main.css
+++ b/public/main.css
@@ -187,14 +187,13 @@
    display: flex;
    position: relative;
    font-weight: 700;
-   height: 6vh;
    align-items: center;
-   padding-inline: .3vw;
+   padding-inline: .5vw;
    text-decoration: none;
    font-size: 1.25vw;
    z-index: 10;
    color: var(--color-dark-black);
-   border-radius: 10px;
+   border-radius: .6vw;
    transition: background-color 0.1s ease-in-out;
  }
  
