--- a/public/materials.css
+++ b/public/materials.css
@@ -19,10 +19,9 @@ ul {
 
 .header {
     width: 100vw;
-    height: 9vh;
     position: fixed;
-    padding-top: 5vh;
-    padding-bottom: 5vh;
+    padding-top: .5vw;
+   padding-bottom: .5vw;
     padding-inline: 12.8vw;
     top: 0;
     left: 0;
@@ -34,51 +33,55 @@ ul {
     align-items: center;
     column-gap: 15vw;
     justify-content: center;
-}
-
-.header-menu {
+  }
+    
+  .header-menu {
     display: flex;
     column-gap: .43vw;
     justify-content: center;
-}
-
-.header-menu-link {
+  }
+    
+  .header-menu-link {
     display: flex;
     position: relative;
     font-weight: 700;
-    height: 6vh;
     align-items: center;
-    padding-inline: .3vw;
+    padding-inline: .5vw;
     text-decoration: none;
     font-size: 1.25vw;
     z-index: 10;
     color: var(--color-dark-black);
-    border-radius: 10px;
+    border-radius: .6vw;
     transition: background-color 0.1s ease-in-out;
-}
-
-
-
-
-.header-logo {
+  }
+  
+  
+    
+    
+  .header-logo {
     flex-shrink: 0;
     opacity: .75;
-}
-
-.lang-contant {
+  }
+  .header-logo img {
+   width: 3vw;
+   height: 3vw;
+  }
+    
+  .lang-contant {
     display: flex;
     column-gap: .3vw;
-}
-
-.lang-title {
+    width: 3vw;
+  }
+    
+  .lang-title {
     font-weight: 600;
     font-size: 1.1vw;
     color: black;
-}
-
-.header-menu-link:hover {
+  }
+  
+  .header-menu-link:hover {
     background-color: var(--color-for-border);
-}
+  }
 
 .main_content {
     max-width: 100vw;
