--- a/public/teachers.css
+++ b/public/teachers.css
@@ -81,7 +81,7 @@ body {
   }
   
   .header-menu-link:hover {
-    background-color: var(--color-for-border);
+    background-color: #d8dce2;
   }
 
 .teachers {
