--- a/public/main.css
+++ b/public/main.css
@@ -273,7 +273,7 @@
  .video_button a {
   font-size: 1vw;
   padding: 1vw;
-  background-color: var(--color-for-border);
+  background-color: #ffffff;
   border-radius: 3vw;
   transition: background-color 1s ease-in-out;
   font-weight: 600;
