--- a/public/main.css
+++ b/public/main.css
@@ -267,18 +267,23 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 3vw;
+  padding: 2vw;
  }
 
  .video_button a {
   font-size: 1vw;
-  padding: 1vw;
+  padding: .6vw;
+  padding-inline: 1vw;
   background-color: #ffffff;
   border-radius: 3vw;
   transition: background-color 1s ease-in-out;
   font-weight: 600;
   border: solid var(--color-for-border) .2vw;
-  color: var(--color-for-border)
+  color: #858a93
+ }
+
+ .video_button a:hover {
+  background-color: #e9e9e9;
  }
  
  .page-second {
