--- a/public/main.css
+++ b/public/main.css
@@ -276,14 +276,14 @@
   padding-inline: 1vw;
   background-color: #ffffff;
   border-radius: 3vw;
-  transition: background-color 1s ease-in-out;
+  transition: background-color .1s ease-in-out;
   font-weight: 600;
   border: solid var(--color-for-border) .2vw;
   color: #858a93
  }
 
  .video_button a:hover {
-  background-color: #e9e9e9;
+  background-color: #e6e6e6;
  }
  
  .page-second {
