--- a/public/main.css
+++ b/public/main.css
@@ -393,7 +393,7 @@
  
  .course_block {
    background-color: #6D78FD;
-   border-radius: 30px;
+   border-radius: 3vw;
    display: flex;
    padding: 3%;
    justify-content: space-between;
@@ -424,8 +424,8 @@
  
  .course_block__course_number {
    background-color: rgba(255, 255, 255, 0.2);
-   border-radius: 10px;
-   padding: 5px 15px;
+   border-radius: 1vw;
+   padding: .3vw 1vw;
    width: fit-content;
    font-size: 1.65vw;
    font-weight: 600;
@@ -438,8 +438,8 @@
    justify-content: space-between;
    width: 25vw;
    background-color: rgba(255, 255, 255, 0.2);
-   border-radius: 20px;
-   padding: 20px 30px;
+   border-radius: 2vw;
+   padding: 1vw 2vw;
    opacity: 0;
    transform: scale(1.2);
  }
@@ -829,5 +829,9 @@
   .page-second src{
     width: 6vw;
     height: auto;
+  }
+
+  .content_section__course h1 {
+    font-size: 4vw;
   }
 }
