--- a/public/main.css
+++ b/public/main.css
@@ -859,4 +859,13 @@
   .graph__column {
     width: 10vw;
   }
+  .graph__column___animation260 {
+    height: 25vw;
+  }
+  .graph__column___animation244 {
+    height: 20.8vw;
+  }
+  .graph__column___animation251 {
+    height: 22vw;
+  }
 }
