--- a/public/main.css
+++ b/public/main.css
@@ -853,6 +853,8 @@
   .graph__column___box {
     font-size: 3.34vw;
     border-radius: 2vw 2vw 0.6vw 0.6vw;
+    padding-inline: 2vw;
+    padding-top: 0.6vw;
   }
   .graph__column p {
     font-size: 2.8vw;
