--- a/public/main.css
+++ b/public/main.css
@@ -777,6 +777,7 @@
     padding: 3.8vw;
     min-width: 40vw;
     min-height: 27vh;
+    border-radius: 4vw;
   }
   .flex-element0 {
     width: 10.5vw; height: 14.55vw
