--- a/public/main.css
+++ b/public/main.css
@@ -884,4 +884,20 @@
   .title-partner {
     margin-top: 5vw;
   }
+  .contact-container_big{
+    padding-bottom: 2vw;
+  }
+  .contact-container_smal img{
+    width: 3vw;
+    height: auto;
+  }
+  .contact-container_smal p{
+    font-size: 2vw;
+  }
+  .contact-container_smal a{
+    font-size: 2vw;
+  }
+  .create-line {
+    width: 90%;
+  }
 }
