--- a/public/main.css
+++ b/public/main.css
@@ -886,6 +886,7 @@
   }
   .contact-container_big{
     padding-bottom: 4vw;
+    padding-top: 2vw;
   }
   .contact-container_smal img{
     width: 3vw;
