--- a/public/teachers.css
+++ b/public/teachers.css
@@ -184,6 +184,7 @@ body {
   .photos_teachers img{
     width: 100%;
     height: auto;
+    border-radius: 2vw;
     border: 2vw solid white;
   }
   .info_block {
