--- a/public/main.css
+++ b/public/main.css
@@ -761,6 +761,27 @@
  }
 
  @media screen and (max-width: 500px){
+  .header {
+    padding-top: 5.5vw;
+  }
+  .header-menu {
+    column-gap: 3.43vw;
+  }
+  .header-menu-link {
+    display: flex;
+    position: relative;
+    align-items: center;
+    text-decoration: none;
+    font-size: 2.55vw;
+    z-index: 10;
+    transition: background-color 0.1s ease-in-out;
+    padding: .6vw;
+    padding-inline: 1vw;
+    background-color: var(--color-light-gray);
+    border-radius: 1.3vw;
+    font-weight: 600;
+    color: var(--color-dark-gray);
+  }
   .content-first {
     min-height: calc(30vh + 44vw);
     line-height: 2;
