--- a/public/main.css
+++ b/public/main.css
@@ -903,7 +903,8 @@
     font-size: 2.5vw;
   }
   .title-partner {
-    font-size: 5.56vw
+    font-size: 5.56vw;
+    margin-top: 5vw;
   }
 
   .partner-container{
