--- a/public/main.css
+++ b/public/main.css
@@ -796,7 +796,7 @@
     background-color: var(--color-light);
     flex: 1;
     padding: 3.8vw;
-    min-width: 40vw;
+    min-width: 90vw;
     min-height: 27vh;
     border-radius: 4vw;
   }
@@ -848,6 +848,9 @@
   .course_block__right_side {
     width: 100%;
   }
+  .content_section {
+    width: 90vw;
+  }
   .content_section__course h1 {
     font-size: 4vw;
   }
@@ -893,8 +896,15 @@
     padding: 4vw;
     margin-bottom: 10vw;
   }
+  .prof0 {
+    margin-left: 5vw;
+  }
+  .empty {
+    min-width: 5vw;
+  }
   .prof-header {
     font-size: 5.56vw;
+    margin-left: 5vw;
   }
   .prof-title {
     font-size: 4vw;
@@ -905,10 +915,16 @@
   .title-partner {
     font-size: 5.56vw;
     margin-top: 5vw;
+    padding-inline: 5vw;
+  }
+
+  .content-second {
+    width: 90vw;
   }
 
   .partner-container{
     padding-bottom: 10vw;
+    padding-inline: 5vw;
   }
   .partner-container img{
     width: 17vw;
