--- a/public/main.css
+++ b/public/main.css
@@ -769,7 +769,7 @@
   .header-menu {
     column-gap: 3.43vw;
   }
-  header-logo-image {
+  header-logo img {
     width: 0;
   }
   .header-menu-link {
