--- a/public/main.css
+++ b/public/main.css
@@ -788,7 +788,7 @@
     color: var(--color-dark-gray);
   }
   .content-first {
-    height: 90.75vh;
+    height: calc(100vh - 9.25vw);
     min-height: calc(30vh + 44vw);
     line-height: 2;
   }
@@ -938,6 +938,10 @@
   .partner-container{
     padding-bottom: 5vw;
     padding-inline: 5vw;
+  }
+  .contact-container_big {
+    padding-top: 2vw;
+    padding-bottom: 4vw;
   }
   .contact-container_smal img{
     width: 3vw;
