--- a/public/disciplines.css
+++ b/public/disciplines.css
@@ -199,18 +199,32 @@ ul {
 }
 
 @media (max-width: 500px) {
+    .header {
+        padding-top: 5.5vw;
+        position: static;
+        gap: 0;
+    }
     .header-menu {
-        column-gap: 1.5vw;
+        column-gap: 3.43vw;
     }
-
+    .header-logo img {
+        width: 0;
+    }
     .header-menu-link {
-        font-size: 2.65vw;
+        display: flex;
+        position: relative;
+        align-items: center;
+        text-decoration: none;
+        font-size: 2.55vw;
+        z-index: 10;
+        transition: background-color 0.1s ease-in-out;
+        padding: .6vw;
+        padding-inline: 1vw;
+        background-color: var(--color-light-gray);
+        border-radius: 1.3vw;
+        font-weight: 600;
+        color: var(--color-dark-gray);
     }
-
-    .lang-title {
-        font-size: 2.5vw;
-    }
-
 }
 
 @media (max-width: 450px) {
